--- a/packages/webview_flutter/android/src/main/res/xml/provider_paths.xml
+++ b/packages/webview_flutter/android/src/main/res/xml/provider_paths.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <cache-path name="camera_images" path="camera_images"/>
+    <cache-path name="storage" path="storage"/>
 </paths>
